EXTRA_DIST                  = diff README COPYING

unikey_scimdir              = ${libdir}
unikey_scim_LTLIBRARIES     = libunikey-scim.la

libunikey_scim_la_LDFLAGS= -version-info $(UNIKEY_CURRENT):$(UNIKEY_REVISION):$(UNIKEY_AGE)

libunikey_scim_la_SOURCES = \
	byteio.cpp \
	byteio.h \
	charset.cpp \
	charset.h \
	convert.cpp \
	data.cpp \
	data.h \
	error.cpp \
	inputproc.cpp \
	inputproc.h \
	keycons.h \
	mactab.cpp \
	mactab.h \
	pattern.cpp \
	pattern.h \
	ukengine.cpp \
	ukengine.h \
	unikey.cpp \
	unikey.h \
	usrkeymap.cpp \
	usrkeymap.h \
	vnconv.h \
	vnlexi.h

